--- a/charts/database/templates/service.yaml
+++ b/charts/database/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "vote.fullname" . }}
+  name: {{ include "database.fullname" . }}
   labels:
-    {{- include "vote.labels" . | nindent 4 }}
+    {{- include "database.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "vote.selectorLabels" . | nindent 4 }}
+    {{- include "database.selectorLabels" . | nindent 4 }}
