--- a/charts/database/values.yaml
+++ b/charts/database/values.yaml
@@ -1,14 +1,14 @@
-# Default values for vote.
+# Default values for database.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 image:
-  repository: camilogonzalez7424/final_project
+  repository: postgres
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "voteV1"
+  tag: "9.5"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -41,7 +41,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 5432
 
 ingress:
   enabled: false
