--- a/charts/result/values.yaml
+++ b/charts/result/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: camilogonzalez7424/final_project
@@ -41,11 +41,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  ports:
-    # Define el puerto del contenedor
-    containerPort: 80
-    # Define el puerto del host al que deseas mapearlo
-    nodePort: 5001
+  port: 80
 
 ingress:
   enabled: false
