--- a/charts/vote/values.yaml
+++ b/charts/vote/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 2
 
 image:
-  repository: jhormanmera/vote
+  repository: camilogonzalez7424/vote
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.3"
+  tag: "0.4"
 
 imagePullSecrets: []
 nameOverride: ""
