--- a/charts/result/values.yaml
+++ b/charts/result/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 2
 
 image:
-  repository: camilogonzalez7424/result
+  repository: jhormanmera/result
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.4"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
